# src/main/java/com/example/ecapi/controller/product/ProductController.java
@@ -4,9 +4,11 @@ import com.example.ecapi.controller.ProductsApi;
 import com.example.ecapi.model.DTOProduct;
 import com.example.ecapi.model.FormProduct;
 import com.example.ecapi.service.product.ProductService;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 
@@ -29,5 +31,11 @@ public class ProductController implements ProductsApi {
     public ResponseEntity<List<DTOProduct>> getProducts() {
         List<DTOProduct> products = service.getProducts();
         return ResponseEntity.ok(products);
+    }
+
+    @Override
+    public ResponseEntity<DTOProduct> addProductThumbnail(Integer id, MultipartFile file) {
+        DTOProduct product = service.addThumbnail(id, file);
+        return ResponseEntity.ok(product);
     }
 }
